--- a/src/main/webapp/system/cadastroProduto.xhtml
+++ b/src/main/webapp/system/cadastroProduto.xhtml
@@ -50,7 +50,7 @@
                         <p:outputLabel styleClass="txt" value="Quantidade:" />
                     </div> 
                     <div class="input">
-                        <p:inputText styleClass="box" value="#{produtoController.produto.quantProduto}"/>   
+                        <p:inputText styleClass="box" value="#{produtoController.produto.quantProduto}" size="12" type="number"/>   
                     </div>
                 </div>
 
